# FluentViewer

./: .gitignore  CMakeLists.txt  CacheVisualWindow.qml  ExampleWindow.qml  FlatToModelViusal.qml  HumanInferCore.py  ModelViusal.qml  NetResouceWindow.qml  README.md  humancoreinfer.cpp  humancoreinfer.h  main.cpp  main.qml
src/: Version.h  humaninfer.cpp  humaninfer.h
